tests/optional_props/optional_props.exp
Error: test.js:2
  2: var y: { foo?: string } = x; // OK in TypeScript, not OK in Flow
                               ^ object type. This type is incompatible with
  2: var y: { foo?: string } = x; // OK in TypeScript, not OK in Flow
            ^^^^^^^^^^^^^^^^ object type
  Property `foo` is incompatible:
      2: var y: { foo?: string } = x; // OK in TypeScript, not OK in Flow
                ^^^^^^^^^^^^^^^^ property `foo`. Property not found in
      2: var y: { foo?: string } = x; // OK in TypeScript, not OK in Flow
                                   ^ object type

Error: test.js:8
  8: o.foo = 0; // future widening is constrained
             ^ Cannot assign `0` to `o.foo` because number [1] is incompatible with string [2].
  References:
    8: o.foo = 0; // future widening is constrained
               ^ [1]: number
    2: var y: { foo?: string } = x; // OK in TypeScript, not OK in Flow
                      ^^^^^^ [2]: string

Error: test.js:12
 12: bar({foo: ""});
               ^^ Cannot call `bar` with object literal bound to `config` because in property `foo`, string [1] is incompatible with number [2].
  References:
   12: bar({foo: ""});
                 ^^ [1]: string
   10: function bar(config: { foo?: number }) {}
                                    ^^^^^^ [2]: number

Error: test2.js:3
  3: a.foo = null; // But this is an error
             ^^^^ Cannot assign `null` to `a.foo` because null [1] is incompatible with string [2].
  References:
    3: a.foo = null; // But this is an error
               ^^^^ [1]: null
    1: var a: { foo?: string } = {};
                      ^^^^^^ [2]: string

Error: test2.js:10
 10: var d: { foo?: string } = { foo: null }; // But this is an error
                                      ^^^^ Cannot assign object literal to `d` because in property `foo`, null [1] is incompatible with string [2].
  References:
   10: var d: { foo?: string } = { foo: null }; // But this is an error
                                        ^^^^ [1]: null
   10: var d: { foo?: string } = { foo: null }; // But this is an error
                      ^^^^^^ [2]: string

Error: test3.js:54
 54:         this.x.b = 'hello';
                    ^ property `b`. Property not found in
 54:         this.x.b = 'hello';
             ^^^^^^ object literal

Error: test3_exact_annot.js:5
  5: const b: { a: number, b?: number } = a; // error: property `b` not found
                                          ^ object type. This type is incompatible with
  5: const b: { a: number, b?: number } = a; // error: property `b` not found
              ^^^^^^^^^^^^^^^^^^^^^^^^^ object type
  Property `b` is incompatible:
      5: const b: { a: number, b?: number } = a; // error: property `b` not found
                  ^^^^^^^^^^^^^^^^^^^^^^^^^ property `b`. Property not found in
      5: const b: { a: number, b?: number } = a; // error: property `b` not found
                                              ^ object type

Error: test3_exact_annot.js:7
  7: (a.b: number); // error: property `b` not found
        ^ property `b`. Property not found in
  7: (a.b: number); // error: property `b` not found
      ^ object type

Error: test3_failure.js:7
  7:     this.o.x.b = 'hello'; // this is a spurious error (see test3.js for details)
                  ^ property `b`. Property not found in
  7:     this.o.x.b = 'hello'; // this is a spurious error (see test3.js for details)
         ^^^^^^^^ object literal


Found 9 errors
